<resources>
    <string name="app_name">Shop Assistant</string>
    <string name="witaj_w_shop_assistant">Witaj w Shop Assistant!</string>
    <string name="cofnij">Cofnij</string>
    <string name="przejd_dalej">Przejdź dalej</string>
    <string name="zaloguj_si">Zaloguj się</string>
    <string name="e_mail">e-mail</string>
    <string name="haslo">hasło</string>
    <string name="shopassistant_time_is_money">ShopAssistant_Time_Is_Money</string>
    <string name="forgot_password"><u>Nie pamiętam hasła</u></string>
    <string name="sign_up"><u>Nie posiadasz konta? Zarejestruj się!</u></string>
    <string name="title_activity_sign_up1">SignUp1</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>